--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          ═══════════════════════════════════════════════ -->
     <header class="flex flex-col md:flex-row justify-between items-start md:items-end pb-4 mb-12">
       <div>
-        <p class="font-mono text-sm text-text-secondary mb-1">v1.0 — Tailwind CSS v4.1</p>
+        <p class="font-mono text-sm text-text-secondary mb-1">v1.0</p>
         <h1 class="text-4xl font-bold uppercase tracking-tight">Datum UI <span class="highlight-strong">Framework</span>
         </h1>
       </div>
@@ -91,25 +91,25 @@
     <section class="mb-16">
       <h2 class="text-2xl font-bold uppercase tracking-tight mb-6">Design Identity</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
-        <div class="card-datum">
+        <div class="card-datum-interactive">
           <p class="font-mono text-sm text-text-secondary mb-1">01</p>
           <p class="font-semibold uppercase tracking-wide text-sm">Clarity over Clutter</p>
           <p class="text-sm text-text-secondary mt-2">Every element earns its space. Data density with functional
             whitespace.</p>
         </div>
-        <div class="card-datum">
+        <div class="card-datum-interactive">
           <p class="font-mono text-sm text-text-secondary mb-1">02</p>
           <p class="font-semibold uppercase tracking-wide text-sm">Geometric Precision</p>
           <p class="text-sm text-text-secondary mt-2">Sharp edges, chamfered corners, deliberate alignment. No organic
             curves.</p>
         </div>
-        <div class="card-datum">
+        <div class="card-datum-interactive">
           <p class="font-mono text-sm text-text-secondary mb-1">03</p>
           <p class="font-semibold uppercase tracking-wide text-sm">Industrial Contrast</p>
           <p class="text-sm text-text-secondary mt-2">Mustard accents against charcoal on off-white. Small, intentional
             palette.</p>
         </div>
-        <div class="card-datum">
+        <div class="card-datum-interactive">
           <p class="font-mono text-sm text-text-secondary mb-1">04</p>
           <p class="font-semibold uppercase tracking-wide text-sm">Flat & Borderline</p>
           <p class="text-sm text-text-secondary mt-2">No drop shadows. Depth via crisp 1px borders and background tints
@@ -1029,11 +1029,11 @@
          ═══════════════════════════════════════════════ -->
     <footer
       class="border-t border-border pt-6 pb-12 flex flex-col sm:flex-row justify-between items-start sm:items-center gap-4">
-      <p class="font-mono text-sm text-text-secondary">Datum UI Framework · Tailwind CSS v4.1</p>
+      <p class="font-mono text-sm text-text-secondary">Datum UI Framework · v1.0</p>
       <div class="flex gap-3">
         <span class="badge">HTML</span>
         <span class="badge">CSS</span>
-        <span class="badge-primary">v4.1</span>
+        <span class="badge-primary">v1.0</span>
       </div>
     </footer>
 
