--- a/index.html
+++ b/index.html
@@ -91,25 +91,25 @@
     <section class="mb-16">
       <h2 class="text-2xl font-bold uppercase tracking-tight mb-6">Design Identity</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
-        <div class="card-datum-interactive">
+        <div class="card-datum-interactive" tabindex="0">
           <p class="font-mono text-sm text-text-secondary mb-1">01</p>
           <p class="font-semibold uppercase tracking-wide text-sm">Clarity over Clutter</p>
           <p class="text-sm text-text-secondary mt-2">Every element earns its space. Data density with functional
             whitespace.</p>
         </div>
-        <div class="card-datum-interactive">
+        <div class="card-datum-interactive" tabindex="0">
           <p class="font-mono text-sm text-text-secondary mb-1">02</p>
           <p class="font-semibold uppercase tracking-wide text-sm">Geometric Precision</p>
           <p class="text-sm text-text-secondary mt-2">Sharp edges, chamfered corners, deliberate alignment. No organic
             curves.</p>
         </div>
-        <div class="card-datum-interactive">
+        <div class="card-datum-interactive" tabindex="0">
           <p class="font-mono text-sm text-text-secondary mb-1">03</p>
           <p class="font-semibold uppercase tracking-wide text-sm">Industrial Contrast</p>
           <p class="text-sm text-text-secondary mt-2">Mustard accents against charcoal on off-white. Small, intentional
             palette.</p>
         </div>
-        <div class="card-datum-interactive">
+        <div class="card-datum-interactive" tabindex="0">
           <p class="font-mono text-sm text-text-secondary mb-1">04</p>
           <p class="font-semibold uppercase tracking-wide text-sm">Flat & Borderline</p>
           <p class="text-sm text-text-secondary mt-2">No drop shadows. Depth via crisp 1px borders and background tints
