chore: finalize Datum UI rebranding and NPM distribution setup

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 
         <!-- ── Cards ── -->
         <div>
-          <h3 class="text-lg font-semibold uppercase tracking-wide mb-4">Blueprint Cards</h3>
+          <h3 class="text-lg font-semibold uppercase tracking-wide mb-4">Datum Cards</h3>
           <div class="space-y-4">
             <div class="card-datum">
               <p class="font-mono text-xs text-text-secondary mb-1">Static Card</p>
